# SimpleDatabase

./: .gitignore  DbValue.cxx  DbValue.h  Makefile  README.md  database.cxx  database.h  error.cpp  error.hpp  lexer.cxx  lexer.h  main.cxx  parser.cxx  parser.h  statement.h  storage.cxx  storage.h  testqueries.txt
UI/android-ui/: settings.gradle
UI/android-ui/app/: build.gradle
UI/android-ui/app/src/androidTest/java/com/knu/android_ui/: ExampleInstrumentedTest.java
UI/android-ui/app/src/main/: AndroidManifest.xml
UI/android-ui/app/src/main/java/com/knu/android_ui/: MainActivity.java
UI/android-ui/app/src/main/res/layout/: activity_main.xml
UI/android-ui/app/src/main/res/values/: themes.xml
UI/android-ui/app/src/main/res/values-night/: themes.xml
UI/android-ui/app/src/test/java/com/knu/android_ui/: ExampleUnitTest.java
UI/android-ui/gradle/wrapper/: gradle-wrapper.properties
UI/linux-ui/: linux-ui.pro  main.cxx  mainwindow.cpp  mainwindow.h  mainwindow.ui
cli/: Makefile  main.cxx
client/: Makefile  client.cxx  client.h  main.cxx
docs/: 0.md  1.md  2.md  3.md  4.md  5.md  bnf.txt
grpc/: CMakeLists.txt  HowToBuild.txt
grpc/client/: CMakeLists.txt
grpc/client/src/: client.cpp  client.h  main.cpp
grpc/proto/myproto/: address.proto  addressbook.proto
grpc/server/: CMakeLists.txt
grpc/server/src/: main.cpp  server.cpp  server.h
server/: Makefile  connection.cxx  connection.h  main.cxx  main.h  server.cxx  server.h
tests/: test_database.h  test_lexer.h  test_main.cxx  test_parser.h
